--- a/examples/with-css-modules/src/markprompt.module.css
+++ b/examples/with-css-modules/src/markprompt.module.css
@@ -191,10 +191,42 @@ button {
   outline: 2px solid var(--blackA9);
 }
 
-.wrapper {
+.MarkpromptReferences {
+  background-color: var(--markprompt-muted);
+  color: var(--markprompt-mutedForeground);
+  border-top: 1px solid var(--markprompt-border);
+}
+
+.MarkpromptPoweredBy {
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
+  justify-content: center;
+  margin: 0;
+  padding: 0.25rem 0;
+  background-color: var(--markprompt-muted);
+  color: var(--markprompt-mutedForeground);
+  border-top: 1px solid var(--markprompt-border);
+  font-size: 0.75rem;
+  z-index: 1;
+}
+
+.MarkpromptPoweredBy a {
+  color: var(--markprompt-mutedForeground);
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
+  text-decoration: none;
+}
+
+.MarkpromptPoweredBy a:hover {
+  color: var(--markprompt-primary);
+}
+
+.answer {
   overflow-y: auto;
   overflow-x: hidden;
-  padding: 1rem;
+  padding: 1rem 2rem;
 }
 
 .answer * {
@@ -227,46 +259,125 @@ button {
   padding: 0.25em 0.5em;
 }
 
-.answer > *:last-child:after {
-  content: '▮';
-  font-size: 1.5em;
-  vertical-align: baseline;
-  color: var(--markprompt-primary);
-  animation: 1200ms blink infinite cubic-bezier(0.14, 0, 0.16, 1);
-  text-shadow: 0 0 2px 0 var(--markprompt-primary);
+.caret {
+  display: none;
+  height: 1rem;
+  width: 0.5rem;
+  margin-left: 0.2rem;
+  transform: translate(2px, 2px);
+  border-radius: 1px;
+  background-color: var(--markprompt-primary);
+  box-shadow: 0 0 3px 0 var(--markprompt-primary);
+  animation-name: blink;
+  animation-duration: 1000ms;
+  animation-fill-mode: both;
+  animation-iteration-count: infinite;
+  transition-timing-function: cubic-bezier(0.14, 0, 0.16, 1);
 }
 
-@keyframes blink {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
+[data-loading-state='loading'] .caret {
+  display: inline-block;
+}
+
+[data-loading-state='success'] .caret {
+  display: none;
+}
+
+.answer :not(:last-child) .caret {
+  display: none;
+}
+
+.progress {
+  position: absolute;
+  top: -2px;
+  left: 0;
+  height: 2px;
+  background-image: linear-gradient(
+    to right,
+    var(--markprompt-primaryHighlight),
+    var(--markprompt-secondaryHighlight)
+  );
+  animation-name: progress;
+  animation-duration: 2s;
+  animation-fill-mode: none;
+  animation-iteration-count: infinite;
+  transition-timing-function: cubic-bezier(0.14, 0, 0.16, 1);
 }
 
 .references {
-  display: none;
+  padding: 0.5rem 2rem;
+  background-color: var(--markprompt-muted);
   border-top: 1px solid var(--markprompt-border);
-  color: var(--markprompt-mutedForeground);
+  font-size: 0.75rem;
+}
+
+.references p {
+  font-weight: 600;
+}
+
+.popup {
+  transform: translateY(100%);
+  opacity: 0;
+  animation: popup 200ms ease-out forwards;
 }
 
 .references ul {
   display: flex;
   flex-wrap: wrap;
-  gap: 1.5rem;
+  gap: 0.75rem;
   list-style-type: none;
   margin-left: 0;
   padding-left: 0;
 }
 
-.references a {
+.reference {
+  font-size: 0.875rem;
+}
+
+.reference a {
+  display: inline-block;
+  text-decoration: none;
+  padding: 0 0.25rem;
+  border: 1px solid var(--markprompt-border);
+  border-radius: 0.25rem;
   color: var(--markprompt-primary);
 }
 
-[data-loading-state='success'] .references {
-  display: block;
+.reference a:hover {
+  border-color: var(--markprompt-mutedForeground);
+}
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes popup {
+  from {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes progress {
+  0% {
+    width: 0;
+    transform: translateX(0);
+  }
+  50% {
+    width: 100%;
+    transform: translateX(0);
+  }
+  100% {
+    width: 100%;
+    transform: translateX(100%);
+  }
 }
