--- a/examples/with-css-modules/src/markprompt.module.css
+++ b/examples/with-css-modules/src/markprompt.module.css
@@ -92,7 +92,7 @@ button {
   transform: translate(-50%, -50%);
   width: 80vw;
   max-width: 600px;
-  height: 80vh;
+  height: calc(100vh - 200px);
   max-height: 700px;
   animation-name: contentShow;
   animation-duration: 300ms;
@@ -197,36 +197,15 @@ button {
   border-top: 1px solid var(--markprompt-border);
 }
 
-.MarkpromptPoweredBy {
-  display: flex;
-  align-items: center;
-  gap: 0.25rem;
-  justify-content: center;
-  margin: 0;
-  padding: 0.25rem 0;
-  background-color: var(--markprompt-muted);
-  color: var(--markprompt-mutedForeground);
-  border-top: 1px solid var(--markprompt-border);
-  font-size: 0.75rem;
-  z-index: 1;
-}
-
-.MarkpromptPoweredBy a {
-  color: var(--markprompt-mutedForeground);
-  display: flex;
-  align-items: center;
-  gap: 0.25rem;
-  text-decoration: none;
-}
-
-.MarkpromptPoweredBy a:hover {
-  color: var(--markprompt-primary);
+.answer :not(:last-child) .caret {
+  display: none;
 }
 
 .answer {
   overflow-y: auto;
   overflow-x: hidden;
-  padding: 1rem 2rem;
+  padding: 2rem 2rem;
+  font-size: var(--markprompt-text-size);
 }
 
 .answer * {
@@ -283,10 +262,6 @@ button {
   display: none;
 }
 
-.answer :not(:last-child) .caret {
-  display: none;
-}
-
 .progress {
   position: absolute;
   top: -2px;
@@ -324,7 +299,7 @@ button {
 .references ul {
   display: flex;
   flex-wrap: wrap;
-  gap: 0.75rem;
+  gap: 0.5rem;
   list-style-type: none;
   margin-left: 0;
   padding-left: 0;
@@ -337,14 +312,16 @@ button {
 .reference a {
   display: inline-block;
   text-decoration: none;
-  padding: 0 0.25rem;
+  padding: 0 0.375rem;
   border: 1px solid var(--markprompt-border);
   border-radius: 0.25rem;
   color: var(--markprompt-primary);
+  transition-property: opacity;
+  transition-duration: 200ms;
 }
 
 .reference a:hover {
-  border-color: var(--markprompt-mutedForeground);
+  opacity: 0.8;
 }
 
 @keyframes blink {
