--- a/examples/with-css-modules/src/markprompt.module.css
+++ b/examples/with-css-modules/src/markprompt.module.css
@@ -1,6 +1,3 @@
-@import '@radix-ui/colors/gray.css';
-@import '@radix-ui/colors/blackA.css';
-
 :root {
   --markprompt-background: #ffffffff;
   --markprompt-foreground: #171717;
@@ -71,15 +68,6 @@ button {
   background-color: var(--markprompt-overlay);
 }
 
-@keyframes overlayShow {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
 .MarkpromptContent {
   background-color: var(--markprompt-background);
   border-radius: var(--markprompt-radius);
@@ -98,24 +86,10 @@ button {
   animation-duration: 300ms;
   animation-fill-mode: both;
   transition-timing-function: cubic-bezier(0.25, 0.4, 0.55, 1.4);
-  color: var(--gray12);
+  color: var(--markprompt-foreground);
   overflow: hidden;
   display: grid;
   grid-template-rows: auto 1fr;
-}
-
-@keyframes contentShow {
-  from {
-    opacity: 0;
-    transform: translate(-50%, -46%) scale(0.98);
-  }
-  50% {
-    transform: translate(-50%, -51%) scale(1.02);
-  }
-  to {
-    opacity: 1;
-    transform: translate(-50%, -50%) scale(1);
-  }
 }
 
 .MarkpromptClose {
@@ -184,11 +158,11 @@ button {
 }
 
 .MarkpromptPrompt::placeholder {
-  color: var(--gray8);
+  color: var(--markprompt-mutedForeground);
 }
 
 .MarkpromptPrompt:focus {
-  outline: 2px solid var(--blackA9);
+  outline: 2px solid var(--markprompt-mutedForeground);
 }
 
 .MarkpromptReferences {
@@ -197,32 +171,32 @@ button {
   border-top: 1px solid var(--markprompt-border);
 }
 
-.answer :not(:last-child) .caret {
+.MarkpromptAnswer :not(:last-child) .caret {
   display: none;
 }
 
-.answer {
+.MarkpromptAnswer {
   overflow-y: auto;
   overflow-x: hidden;
   padding: 2rem 2rem;
   font-size: var(--markprompt-text-size);
 }
 
-.answer * {
+.MarkpromptAnswer * {
   line-height: 1.6;
   margin-top: 0;
 }
 
-.answer * + * {
+.MarkpromptAnswer * + * {
   margin-top: 1.5em;
 }
 
-.answer ul,
-.answer ol {
+.MarkpromptAnswer ul,
+.MarkpromptAnswer ol {
   padding-left: 1.25em;
 }
 
-.answer code:not(pre code) {
+.MarkpromptAnswer code:not(pre code) {
   background-color: var(--markprompt-muted);
   border: 1px solid var(--markprompt-border);
   color: var(--markprompt-foreground);
@@ -230,7 +204,7 @@ button {
   padding: 0.125em 0.25em;
 }
 
-.answer pre {
+.MarkpromptAnswer pre {
   background-color: var(--markprompt-muted);
   border: 1px solid var(--markprompt-border);
   color: var(--markprompt-foreground);
@@ -262,7 +236,7 @@ button {
   display: none;
 }
 
-.progress {
+[data-loading-state='loading'] .progress {
   position: absolute;
   top: -2px;
   left: 0;
@@ -277,51 +251,129 @@ button {
   animation-fill-mode: none;
   animation-iteration-count: infinite;
   transition-timing-function: cubic-bezier(0.14, 0, 0.16, 1);
+  transition: opacity 200ms ease;
+}
+[data-loading-state='loading'] .progress {
+  opacity: 1;
+}
+[data-loading-state='success'] .progress {
+  opacity: 0;
 }
 
 .references {
-  padding: 0.5rem 2rem;
+  position: 'relative';
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
   background-color: var(--markprompt-muted);
   border-top: 1px solid var(--markprompt-border);
   font-size: 0.75rem;
-}
-
-.references p {
-  font-weight: 600;
-}
-
-.popup {
+  transition: height 500ms ease;
   transform: translateY(100%);
   opacity: 0;
   animation: popup 200ms ease-out forwards;
+  width: 100%;
+  box-sizing: border-box;
+}
+.references[data-loading-state='loading'] {
+  height: 50px;
+}
+.references[data-loading-state='success'] {
+  height: 95px;
+}
+
+.references p {
+  transition: opacity 500ms ease;
+  position: absolute;
+  top: 0.25rem;
+  left: 2rem;
+  right: 2rem;
+  font-weight: 600;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.references[data-loading-state='loading'] > p:first-of-type {
+  opacity: 1;
+}
+.references[data-loading-state='loading'] > p:last-of-type {
+  opacity: 0;
+}
+.references[data-loading-state='success'] > p:first-of-type {
+  opacity: 0 !important;
+}
+.references[data-loading-state='success'] > p:last-of-type {
+  opacity: 1;
 }
 
 .references ul {
+  width: 100%;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
   gap: 0.5rem;
   list-style-type: none;
-  margin-left: 0;
-  padding-left: 0;
+  margin-top: 2.25rem;
+  padding-left: 2rem;
+  padding-bottom: 2rem;
+  overflow-x: auto;
+  min-width: 100%;
+  width: 0;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.references ul::-webkit-scrollbar {
+  display: none;
 }
 
 .reference {
   font-size: 0.875rem;
+  line-height: 1.5rem;
+  animation-name: slide-up;
+  animation-duration: 1s;
+  animation-fill-mode: both;
+  transition-timing-function: ease-in-out;
 }
 
 .reference a {
   display: inline-block;
   text-decoration: none;
-  padding: 0 0.375rem;
+  padding: 0.125rem 0.5rem;
   border: 1px solid var(--markprompt-border);
-  border-radius: 0.25rem;
+  border-radius: 0.375rem;
   color: var(--markprompt-primary);
+  font-weight: 500;
   transition-property: opacity;
   transition-duration: 200ms;
+  white-space: nowrap;
 }
 
 .reference a:hover {
   opacity: 0.8;
+}
+
+@keyframes contentShow {
+  from {
+    opacity: 0;
+    transform: translate(-50%, -46%) scale(0.98);
+  }
+  50% {
+    transform: translate(-50%, -51%) scale(1.02);
+  }
+  to {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
+}
+
+@keyframes overlayShow {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes blink {
@@ -356,5 +408,16 @@ button {
   100% {
     width: 100%;
     transform: translateX(100%);
+  }
+}
+
+@keyframes slide-up {
+  from {
+    opacity: 0;
+    transform: translateY(16px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
