--- a/examples/with-css-modules/src/markprompt.module.css
+++ b/examples/with-css-modules/src/markprompt.module.css
@@ -81,7 +81,7 @@ button {
   width: 80vw;
   max-width: 600px;
   height: calc(100vh - 200px);
-  max-height: 700px;
+  max-height: 600px;
   animation-name: contentShow;
   animation-duration: 300ms;
   animation-fill-mode: both;
@@ -171,31 +171,99 @@ button {
   border-top: 1px solid var(--markprompt-border);
 }
 
-.MarkpromptAnswer :not(:last-child) .caret {
-  display: none;
-}
-
 .MarkpromptAnswer {
   overflow-y: auto;
   overflow-x: hidden;
-  padding: 2rem 2rem;
+  height: 100%;
+  padding: 1rem 2rem;
+  scroll-behavior: smooth;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
   font-size: var(--markprompt-text-size);
 }
-
-.MarkpromptAnswer * {
-  line-height: 1.6;
+.MarkpromptAnswer::-webkit-scrollbar {
+  display: none;
+}
+.MarkpromptAnswer :not(:last-child) .caret {
+  display: none;
+}
+.MarkpromptAnswer p {
+  margin-top: 1.1em;
+  margin-bottom: 1.1em;
+}
+.MarkpromptAnswer a {
+  color: var(--markprompt-primary);
+  font-weight: 500;
+}
+.MarkpromptAnswer blockquote {
+  margin-top: 1.3em;
+  margin-bottom: 1.3em;
+  padding-left: 1.1em;
+}
+.MarkpromptAnswer h1 {
+  font-size: 2.1em;
   margin-top: 0;
+  margin-bottom: 0.8em;
+  line-height: 1.2;
 }
-
-.MarkpromptAnswer * + * {
+.MarkpromptAnswer h2 {
+  font-size: 1.4em;
+  margin-top: 1.6em;
+  margin-bottom: 0.8em;
+  line-height: 1.4;
+}
+.MarkpromptAnswer h3 {
+  font-size: 1.3em;
   margin-top: 1.5em;
+  margin-bottom: 0.5em;
+  line-height: 1.5;
 }
-
-.MarkpromptAnswer ul,
-.MarkpromptAnswer ol {
-  padding-left: 1.25em;
+.MarkpromptAnswer h4 {
+  margin-top: 1.4em;
+  margin-bottom: 0.5em;
+  line-height: 1.4;
 }
-
+.MarkpromptAnswer img {
+  margin-top: 1.75em;
+  margin-bottom: 1.75em;
+}
+.MarkpromptAnswer video {
+  margin-top: 1.75em;
+  margin-bottom: 1.75em;
+}
+.MarkpromptAnswer figure {
+  margin-top: 1.75em;
+  margin-bottom: 1.75em;
+}
+.MarkpromptAnswer figure > * {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.MarkpromptAnswer figcaption {
+  font-size: 0.8em;
+  line-height: 1.33;
+  margin-top: 0.7em;
+}
+.MarkpromptAnswer code {
+  font-size: 0.8em;
+}
+.MarkpromptAnswer h2 code {
+  font-size: 0.9em;
+}
+.MarkpromptAnswer h3 code {
+  font-size: 0.875em;
+}
+.MarkpromptAnswer pre {
+  font-size: 1em;
+  line-height: 1.6;
+  margin-top: 1.7em;
+  margin-bottom: 1.7em;
+  border-radius: 0.25em;
+  padding: 0.67em 1em;
+  background-color: var(--markprompt-muted);
+  border: 1px solid var(--markprompt-border);
+  color: var(--markprompt-foreground);
+}
 .MarkpromptAnswer code:not(pre code) {
   background-color: var(--markprompt-muted);
   border: 1px solid var(--markprompt-border);
@@ -203,13 +271,91 @@ button {
   border-radius: 0.25em;
   padding: 0.125em 0.25em;
 }
-
-.MarkpromptAnswer pre {
-  background-color: var(--markprompt-muted);
-  border: 1px solid var(--markprompt-border);
-  color: var(--markprompt-foreground);
-  border-radius: 0.25em;
-  padding: 0.25em 0.5em;
+.MarkpromptAnswer ol {
+  margin-top: 1.1em;
+  margin-bottom: 1.1em;
+  padding-left: 1.6em;
+}
+.MarkpromptAnswer ul {
+  margin-top: 1.1em;
+  margin-bottom: 1.1em;
+  padding-left: 1.6em;
+}
+.MarkpromptAnswer li {
+  margin-top: 0.3em;
+  margin-bottom: 0.3em;
+}
+.MarkpromptAnswer 'ol > li' {
+  padding-left: 0.4em;
+}
+.MarkpromptAnswer 'ul > li' {
+  padding-left: 0.4em;
+}
+.MarkpromptAnswer '> ul > li p' {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
+.MarkpromptAnswer '> ul > li > *:first-child' {
+  margin-top: 1.1em;
+}
+.MarkpromptAnswer '> ul > li > *:last-child' {
+  margin-bottom: 1.1em;
+}
+.MarkpromptAnswer '> ol > li > *:first-child' {
+  margin-top: 1.1em;
+}
+.MarkpromptAnswer '> ol > li > *:last-child' {
+  margin-bottom: 1.1em;
+}
+.MarkpromptAnswer 'ul ul, ul ol, ol ul, ol ol' {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
+.MarkpromptAnswer hr {
+  margin-top: 2.8em;
+  margin-bottom: 2.8em;
+}
+.MarkpromptAnswer hr + * {
+  margin-top: 0;
+}
+.MarkpromptAnswer h2 + * {
+  margin-top: 0;
+}
+.MarkpromptAnswer h3 + * {
+  margin-top: 0;
+}
+.MarkpromptAnswer h4 + * {
+  margin-top: 0;
+}
+.MarkpromptAnswer table {
+  font-size: 0.8em;
+  line-height: 1.5;
+}
+.MarkpromptAnswer thead th {
+  padding-right: 1em;
+  padding-bottom: 0.7em;
+  padding-left: 1em;
+}
+.MarkpromptAnswer thead th:first-child {
+  padding-left: 0;
+}
+.MarkpromptAnswer thead th:last-child {
+  padding-right: 0;
+}
+.MarkpromptAnswer tbody td,
+.MarkpromptAnswer tfoot td {
+  padding-top: 0.7em;
+  padding-right: 1em;
+  padding-bottom: 0.7em;
+  padding-left: 1em;
+}
+.MarkpromptAnswer tbody td:first-child,
+.MarkpromptAnswer tfoot td:first-child {
+  padding-left: 0;
+}
+.MarkpromptAnswer tbody td:last-child,
+.MarkpromptAnswer tfoot td:last-child {
+  padding-right: 0;
 }
 
 .caret {
