--- a/examples/with-css-modules/src/markprompt.module.css
+++ b/examples/with-css-modules/src/markprompt.module.css
@@ -1,5 +1,7 @@
+/* style.css */
+
 :root {
-  --markprompt-background: #ffffffff;
+  --markprompt-background: #ffffff;
   --markprompt-foreground: #171717;
   --markprompt-muted: #fafafa;
   --markprompt-mutedForeground: #737373;
@@ -10,12 +12,12 @@
   --markprompt-secondary: #fafafa;
   --markprompt-secondaryForeground: #171717;
   --markprompt-primaryHighlight: #ec4899;
-  --markprompt-secondaryHighlight: #7539ad;
+  --markprompt-secondaryHighlight: #a855f7;
+  --markprompt-overlay: #00000010;
   --markprompt-ring: #0ea5e9;
-  --markprompt-overlay: #00000000;
   --markprompt-radius: 8px;
-  --markprompt-button-icon-size: 1rem;
   --markprompt-text-size: 0.875rem;
+  --markprompt-button-icon-size: 1rem;
 }
 
 .dark {
@@ -31,6 +33,7 @@
   --markprompt-secondaryForeground: #ffffff;
   --markprompt-primaryHighlight: #ec4899;
   --markprompt-secondaryHighlight: #a855f7;
+  --markprompt-overlay: #00000040;
   --markprompt-ring: #ffffff;
 }
 
@@ -138,8 +141,7 @@ button {
   border-right: none !important;
   border-top: none !important;
   outline: none !important;
-  border-bottom-width: 1px;
-  border-bottom-color: var(--markprompt-border);
+  border-bottom: 1px solid var(--markprompt-border);
   box-shadow: none;
   width: 100%;
   padding-left: 3.5rem;
@@ -147,6 +149,7 @@ button {
   padding-top: 1rem;
   padding-bottom: 1rem;
   font-size: var(--markprompt-text-size);
+  background-color: var(--markprompt-background);
   color: var(--markprompt-foreground);
   caret-color: var(--markprompt-primary);
 }
@@ -187,133 +190,308 @@ button {
 .MarkpromptAnswer :not(:last-child) .caret {
   display: none;
 }
+.MarkpromptAnswer {
+  color: var(--markprompt-foreground);
+  max-width: 65ch;
+  font-size: 0.875rem;
+  line-height: 1.7142857;
+}
 .MarkpromptAnswer p {
-  margin-top: 1.1em;
-  margin-bottom: 1.1em;
+  margin-top: 1.1428571em;
+  margin-bottom: 1.1428571em;
 }
 .MarkpromptAnswer a {
   color: var(--markprompt-primary);
+  text-decoration: underline;
   font-weight: 500;
 }
+.MarkpromptAnswer strong {
+  font-weight: 600;
+}
+.MarkpromptAnswer a strong {
+  color: inherit;
+}
+.MarkpromptAnswer blockquote strong {
+  color: inherit;
+}
+.MarkpromptAnswer thead th strong {
+  color: inherit;
+}
+.MarkpromptAnswer ol {
+  list-style-type: decimal;
+  margin-top: 1.1428571em;
+  margin-bottom: 1.1428571em;
+  padding-left: 1.5714286em;
+}
+.MarkpromptAnswer ol[type='A'] {
+  list-style-type: upper-alpha;
+}
+.MarkpromptAnswer ol[type='a'] {
+  list-style-type: lower-alpha;
+}
+.MarkpromptAnswer ol[type='A' s] {
+  list-style-type: upper-alpha;
+}
+.MarkpromptAnswer ol[type='a' s] {
+  list-style-type: lower-alpha;
+}
+.MarkpromptAnswer ol[type='I'] {
+  list-style-type: upper-roman;
+}
+.MarkpromptAnswer ol[type='i'] {
+  list-style-type: lower-roman;
+}
+.MarkpromptAnswer ol[type='I' s] {
+  list-style-type: upper-roman;
+}
+.MarkpromptAnswer ol[type='i' s] {
+  list-style-type: lower-roman;
+}
+.MarkpromptAnswer ol[type='1'] {
+  list-style-type: decimal;
+}
+.MarkpromptAnswer ul {
+  list-style-type: disc;
+  margin-top: 1.1428571em;
+  margin-bottom: 1.1428571em;
+  padding-left: 1.5714286em;
+}
+.MarkpromptAnswer ol > li::marker {
+  font-weight: 400;
+  color: var(--markprompt-foreground);
+}
+.MarkpromptAnswer ul > li::marker {
+  color: var(--markprompt-mutedForeground);
+}
+.MarkpromptAnswer hr {
+  border-color: var(--markprompt-border);
+  border-top-width: 1;
+  margin-top: 2.8571429em;
+  margin-bottom: 2.8571429em;
+}
 .MarkpromptAnswer blockquote {
-  margin-top: 1.3em;
-  margin-bottom: 1.3em;
-  padding-left: 1.1em;
+  font-weight: 500;
+  font-style: italic;
+  color: var(--markprompt-foreground);
+  border-left-width: 0.25rem;
+  border-left-color: var(--markprompt-border);
+  quotes: '\201C''\201D''\2018''\2019';
+  margin-top: 1.3333333em;
+  margin-bottom: 1.3333333em;
+  padding-left: 1.1111111em;
+}
+.MarkpromptAnswer blockquote p:first-of-type::before {
+  content: open-quote;
+}
+.MarkpromptAnswer blockquote p:last-of-type::after {
+  content: close-quote;
 }
 .MarkpromptAnswer h1 {
-  font-size: 2.1em;
+  color: var(--markprompt-foreground);
+  font-weight: 800;
+  font-size: 2.1428571em;
   margin-top: 0;
   margin-bottom: 0.8em;
   line-height: 1.2;
 }
+.MarkpromptAnswer h1 strong {
+  font-weight: 900;
+  color: inherit;
+}
 .MarkpromptAnswer h2 {
-  font-size: 1.4em;
+  color: var(--markprompt-foreground);
+  font-weight: 700;
+  font-size: 1.4285714em;
   margin-top: 1.6em;
   margin-bottom: 0.8em;
   line-height: 1.4;
 }
+.MarkpromptAnswer h2 strong {
+  font-weight: 800;
+  color: inherit;
+}
 .MarkpromptAnswer h3 {
-  font-size: 1.3em;
-  margin-top: 1.5em;
-  margin-bottom: 0.5em;
-  line-height: 1.5;
+  color: var(--markprompt-foreground);
+  font-weight: 600;
+  font-size: 1.2857143em;
+  margin-top: 1.5555556em;
+  margin-bottom: 0.4444444em;
+  line-height: 1.5555556;
+}
+.MarkpromptAnswer h3 strong {
+  font-weight: 700;
+  color: inherit;
 }
 .MarkpromptAnswer h4 {
-  margin-top: 1.4em;
-  margin-bottom: 0.5em;
-  line-height: 1.4;
+  color: var(--markprompt-foreground);
+  font-weight: 600;
+  margin-top: 1.4285714em;
+  margin-bottom: 0.5714286em;
+  line-height: 1.4285714;
+}
+.MarkpromptAnswer h4 strong {
+  font-weight: 700;
+  color: inherit;
 }
 .MarkpromptAnswer img {
-  margin-top: 1.75em;
-  margin-bottom: 1.75em;
-}
-.MarkpromptAnswer video {
-  margin-top: 1.75em;
-  margin-bottom: 1.75em;
-}
-.MarkpromptAnswer figure {
-  margin-top: 1.75em;
-  margin-bottom: 1.75em;
+  margin-top: 1.7142857em;
+  margin-bottom: 1.7142857em;
 }
 .MarkpromptAnswer figure > * {
   margin-top: 0;
   margin-bottom: 0;
 }
 .MarkpromptAnswer figcaption {
-  font-size: 0.8em;
-  line-height: 1.33;
-  margin-top: 0.7em;
+  color: var(--markprompt-mutedForeground);
+  font-size: 0.8571429em;
+  line-height: 1.3333333;
+  margin-top: 0.6666667em;
 }
 .MarkpromptAnswer code {
-  font-size: 0.8em;
+  color: var(--markprompt-foreground);
+  font-weight: 600;
+  font-size: 0.8571429em;
+}
+.MarkpromptAnswer code::before {
+  content: '`';
+}
+.MarkpromptAnswer code::after {
+  content: '`';
+}
+.MarkpromptAnswer a code {
+  color: inherit;
+}
+.MarkpromptAnswer h1 code {
+  color: inherit;
 }
 .MarkpromptAnswer h2 code {
+  color: inherit;
   font-size: 0.9em;
 }
 .MarkpromptAnswer h3 code {
-  font-size: 0.875em;
+  color: inherit;
+  font-size: 0.8888889em;
+}
+.MarkpromptAnswer h4 code {
+  color: inherit;
+}
+.MarkpromptAnswer blockquote code {
+  color: inherit;
+}
+.MarkpromptAnswer thead th code {
+  color: inherit;
 }
 .MarkpromptAnswer pre {
-  font-size: 1em;
-  line-height: 1.6;
-  margin-top: 1.7em;
-  margin-bottom: 1.7em;
-  border-radius: 0.25em;
-  padding: 0.67em 1em;
+  color: var(--markprompt-foreground);
   background-color: var(--markprompt-muted);
   border: 1px solid var(--markprompt-border);
+  overflow-x: auto;
+  font-weight: 400;
+  font-size: 0.8571429em;
+  line-height: 1.6666667;
+  margin-top: 1.6666667em;
+  margin-bottom: 1.6666667em;
+  border-radius: 0.25rem;
+  padding-top: 0.6666667em;
+  padding-right: 1em;
+  padding-bottom: 0.6666667em;
+  padding-left: 1em;
+}
+.MarkpromptAnswer pre code {
+  background-color: transparent;
+  border-width: 0;
+  border-radius: 0;
+  padding: 0;
+  font-weight: inherit;
+  color: inherit;
+  font-size: inherit;
+  font-family: inherit;
+  line-height: inherit;
+}
+.MarkpromptAnswer pre code::before {
+  content: none;
+}
+.MarkpromptAnswer pre code::after {
+  content: none;
+}
+.MarkpromptAnswer table {
+  width: 100%;
+  table-layout: auto;
+  text-align: left;
+  margin-top: 2em;
+  margin-bottom: 2em;
+  font-size: 0.8571429em;
+  line-height: 1.5;
+}
+.MarkpromptAnswer thead {
+  border-bottom-width: 1px;
+  border-bottom-color: var(--markprompt-border);
+}
+.MarkpromptAnswer thead th {
   color: var(--markprompt-foreground);
+  font-weight: 600;
+  vertical-align: bottom;
+  padding-right: 1em;
+  padding-bottom: 0.6666667em;
+  padding-left: 1em;
 }
-.MarkpromptAnswer code:not(pre code) {
-  background-color: var(--markprompt-muted);
-  border: 1px solid var(--markprompt-border);
-  color: var(--markprompt-foreground);
-  border-radius: 0.25em;
-  padding: 0.125em 0.25em;
+.MarkpromptAnswer tbody tr {
+  border-bottom-width: 1px;
+  border-bottom-color: var(--markprompt-border);
 }
-.MarkpromptAnswer ol {
-  margin-top: 1.1em;
-  margin-bottom: 1.1em;
-  padding-left: 1.6em;
+.MarkpromptAnswer tbody tr:last-child {
+  border-bottom-width: 0;
 }
-.MarkpromptAnswer ul {
-  margin-top: 1.1em;
-  margin-bottom: 1.1em;
-  padding-left: 1.6em;
+.MarkpromptAnswer tbody td {
+  vertical-align: baseline;
+}
+.MarkpromptAnswer tfoot {
+  border-top-width: 1px;
+  border-top-color: var(--markprompt-border);
+}
+.MarkpromptAnswer tfoot td {
+  vertical-align: top;
+}
+.MarkpromptAnswer video {
+  margin-top: 1.7142857em;
+  margin-bottom: 1.7142857em;
+}
+.MarkpromptAnswer figure {
+  margin-top: 1.7142857em;
+  margin-bottom: 1.7142857em;
 }
 .MarkpromptAnswer li {
-  margin-top: 0.3em;
-  margin-bottom: 0.3em;
+  margin-top: 0.2857143em;
+  margin-bottom: 0.2857143em;
 }
-.MarkpromptAnswer 'ol > li' {
-  padding-left: 0.4em;
+.MarkpromptAnswer ol > li {
+  padding-left: 0.4285714em;
 }
-.MarkpromptAnswer 'ul > li' {
-  padding-left: 0.4em;
+.MarkpromptAnswer ul > li {
+  padding-left: 0.4285714em;
 }
-.MarkpromptAnswer '> ul > li p' {
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
+.MarkpromptAnswer > ul > li p {
+  margin-top: 0.5714286em;
+  margin-bottom: 0.5714286em;
 }
-.MarkpromptAnswer '> ul > li > *:first-child' {
-  margin-top: 1.1em;
+.MarkpromptAnswer > ul > li > *:first-child {
+  margin-top: 1.1428571em;
 }
-.MarkpromptAnswer '> ul > li > *:last-child' {
-  margin-bottom: 1.1em;
+.MarkpromptAnswer > ul > li > *:last-child {
+  margin-bottom: 1.1428571em;
 }
-.MarkpromptAnswer '> ol > li > *:first-child' {
-  margin-top: 1.1em;
+.MarkpromptAnswer > ol > li > *:first-child {
+  margin-top: 1.1428571em;
 }
-.MarkpromptAnswer '> ol > li > *:last-child' {
-  margin-bottom: 1.1em;
+.MarkpromptAnswer > ol > li > *:last-child {
+  margin-bottom: 1.1428571em;
 }
-.MarkpromptAnswer 'ul ul, ul ol, ol ul, ol ol' {
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
-}
-.MarkpromptAnswer hr {
-  margin-top: 2.8em;
-  margin-bottom: 2.8em;
+.MarkpromptAnswer ul ul,
+.MarkpromptAnswer ul ol,
+.MarkpromptAnswer ol ul,
+.MarkpromptAnswer ol ol {
+  margin-top: 0.5714286em;
+  margin-bottom: 0.5714286em;
 }
 .MarkpromptAnswer hr + * {
   margin-top: 0;
@@ -327,15 +505,6 @@ button {
 .MarkpromptAnswer h4 + * {
   margin-top: 0;
 }
-.MarkpromptAnswer table {
-  font-size: 0.8em;
-  line-height: 1.5;
-}
-.MarkpromptAnswer thead th {
-  padding-right: 1em;
-  padding-bottom: 0.7em;
-  padding-left: 1em;
-}
 .MarkpromptAnswer thead th:first-child {
   padding-left: 0;
 }
@@ -344,9 +513,9 @@ button {
 }
 .MarkpromptAnswer tbody td,
 .MarkpromptAnswer tfoot td {
-  padding-top: 0.7em;
+  padding-top: 0.6666667em;
   padding-right: 1em;
-  padding-bottom: 0.7em;
+  padding-bottom: 0.6666667em;
   padding-left: 1em;
 }
 .MarkpromptAnswer tbody td:first-child,
