Add caret and autoscroller, references wip

--- a/examples/with-css-modules/src/markprompt.module.css
+++ b/examples/with-css-modules/src/markprompt.module.css
@@ -275,7 +275,7 @@ button {
   color: var(--markprompt-foreground);
   border-left-width: 0.25rem;
   border-left-color: var(--markprompt-border);
-  quotes: '\201C''\201D''\2018''\2019';
+  quotes: '“' '”' '‘' '’';
   margin-top: 1.3333333em;
   margin-bottom: 1.3333333em;
   padding-left: 1.1111111em;
