--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -16,6 +16,7 @@
   --markprompt-radius: 8px;
   --markprompt-text-size: 0.875rem;
   --markprompt-button-icon-size: 1rem;
+  --markprompt-icon-stroke-width: 2px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -35,6 +36,24 @@
     --markprompt-overlay: #00000040;
     --markprompt-ring: #ffffff;
   }
+}
+
+/* Remove the 'x' clear button from the search input field */
+input[type='search']::-ms-clear {
+  display: none;
+  width: 0;
+  height: 0;
+}
+input[type='search']::-ms-reveal {
+  display: none;
+  width: 0;
+  height: 0;
+}
+input[type='search']::-webkit-search-decoration,
+input[type='search']::-webkit-search-cancel-button,
+input[type='search']::-webkit-search-results-button,
+input[type='search']::-webkit-search-results-decoration {
+  display: none;
 }
 
 :where([class^='Markprompt']) {
@@ -111,9 +130,10 @@
   position: absolute;
   top: 0.75rem;
   right: 0.75rem;
-  color: var(--markprompt-foreground);
+  color: var(--markprompt-mutedForeground);
   width: var(--markprompt-button-icon-size);
   height: var(--markprompt-button-icon-size);
+  stroke-width: var(--markprompt-icon-stroke-width);
   padding: 0.25rem;
   border-radius: 4px;
   cursor: pointer;
@@ -133,9 +153,12 @@
 }
 
 :where(.MarkpromptForm) {
-  display: grid;
-  grid-template-columns: 3.5rem 1fr 3.5rem;
+  display: flex;
+  flex: 1 1 auto;
+  align-items: center;
   border-bottom: 1px solid var(--markprompt-border);
+  padding: 0 1.25rem;
+  gap: 1rem;
 }
 
 :where(.MarkpromptPromptLabel) {
@@ -145,9 +168,10 @@
 }
 
 :where(.MarkpromptSearchIcon) {
-  color: var(--markprompt-foreground);
+  color: var(--markprompt-mutedForeground);
   width: var(--markprompt-button-icon-size);
   height: var(--markprompt-button-icon-size);
+  stroke-width: var(--markprompt-icon-stroke-width);
 }
 
 :where(.MarkpromptTitle) {
@@ -730,14 +754,17 @@
 }
 
 :where(.MarkpromptSearchAnswerButton) {
-  padding-block: 1rem;
-  padding-inline: 2rem;
+  display: flex;
+  flex: 1 1 auto;
+  align-items: center;
+  border-bottom: 1px solid var(--markprompt-border);
+  padding: 1rem 1.25rem;
+  gap: 1.15rem;
+  cursor: pointer;
   border: none;
   background: none;
-  display: flex;
-  gap: 1.5rem;
   width: 100%;
-  cursor: pointer;
+  outline: none;
 }
 
 :where(.MarkpromptSearchAnswerButton:hover) {
@@ -751,15 +778,16 @@
 :where(.MarkpromptSearchAnswerButton kbd) {
   display: flex;
   align-items: center;
-  font-size: 0.9rem;
-  line-height: 1;
-  font-family: monospace;
-  gap: 2px;
+  flex-direction: row;
+  gap: 4px;
   color: var(--markprompt-mutedForeground);
 }
 
-:where(.MarkpromptMetaKey) {
-  font-size: 1.35em;
+:where(.MarkpromptKeyboardKey) {
+  color: var(--markprompt-mutedForeground);
+  stroke-width: var(--markprompt-icon-stroke-width);
+  width: calc(var(--markprompt-button-icon-size) * 0.8);
+  height: calc(var(--markprompt-button-icon-size) * 0.8);
 }
 
 @keyframes markprompt-show-content {
