--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -82,6 +82,7 @@ input[type='search']::-webkit-search-results-decoration {
   position: fixed;
   bottom: 2rem;
   right: 2rem;
+  stroke-width: var(--markprompt-icon-stroke-width);
   transition-property: opacity;
   transition-duration: 200ms;
 }
@@ -204,8 +205,15 @@ input[type='search']::-webkit-search-results-decoration {
   outline: none;
 }
 
-:where(.MarkpromptAutoScroller) {
+:where(.MarkpromptPromptContainer) {
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+:where(.MarkpromptAutoScroller) {
+  flex-grow: 1;
   -ms-overflow-style: none;
   scroll-behavior: smooth;
   scrollbar-width: none;
@@ -654,9 +662,9 @@ input[type='search']::-webkit-search-results-decoration {
 
 :where([data-loading-state='preload'] .MarkpromptProgress) {
   position: absolute;
-  top: -2px;
+  top: -1px;
   left: 0;
-  height: 2px;
+  height: 3px;
   background-image: linear-gradient(
     to right,
     var(--markprompt-primaryHighlight),
@@ -681,7 +689,8 @@ input[type='search']::-webkit-search-results-decoration {
 }
 
 :where(.MarkpromptReferences) {
-  padding-block: 1rem;
+  position: relative;
+  padding-top: 1rem;
   padding-inline: 2rem;
   background-color: var(--markprompt-muted);
   border-top: 1px solid var(--markprompt-border);
@@ -693,6 +702,7 @@ input[type='search']::-webkit-search-results-decoration {
   animation: markprompt-popup 200ms ease-out forwards;
   overflow: hidden;
   box-sizing: border-box;
+  flex: none;
 }
 
 :where(.MarkpromptReferences[data-loading-state='preload']) {
@@ -724,6 +734,7 @@ input[type='search']::-webkit-search-results-decoration {
   align-items: center;
   gap: 0.5rem;
   padding-left: 0;
+  padding-bottom: 20px;
   list-style-type: none;
   overflow-x: auto;
   -ms-overflow-style: none;
@@ -766,7 +777,7 @@ input[type='search']::-webkit-search-results-decoration {
   color: var(--markprompt-primary);
   border-bottom: 1px solid var(--markprompt-border);
   display: flex;
-  flex: 1 auto;
+  flex: none;
   align-items: center;
   font-weight: 500;
   padding: 0.5rem 1rem;
