--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -38,29 +38,6 @@
   }
 }
 
-/* Remove 2px padding that some browsers add to input */
-input[type='search' i] {
-  padding: 1rem 0;
-}
-
-/* Remove the 'x' clear button from the search input field */
-input[type='search']::-ms-clear {
-  display: none;
-  width: 0;
-  height: 0;
-}
-input[type='search']::-ms-reveal {
-  display: none;
-  width: 0;
-  height: 0;
-}
-input[type='search']::-webkit-search-decoration,
-input[type='search']::-webkit-search-cancel-button,
-input[type='search']::-webkit-search-results-button,
-input[type='search']::-webkit-search-results-decoration {
-  display: none;
-}
-
 :where([class^='Markprompt']) {
   box-sizing: border-box;
 }
@@ -137,10 +114,9 @@ input[type='search']::-webkit-search-results-decoration {
   top: 0.75rem;
   right: 0.75rem;
   color: var(--markprompt-mutedForeground);
-  width: var(--markprompt-button-icon-size);
-  height: var(--markprompt-button-icon-size);
   stroke-width: var(--markprompt-icon-stroke-width);
   padding: 0.25rem;
+  background-color: var(--markprompt-muted);
   border-radius: 4px;
   cursor: pointer;
   display: grid;
@@ -212,6 +188,29 @@ input[type='search']::-webkit-search-results-decoration {
 
 :where(.MarkpromptPrompt:focus) {
   outline: none;
+}
+
+/* Remove 2px padding that some browsers add to input */
+:where(.MarkpromptPrompt[type='search' i]) {
+  padding: 1rem 0;
+}
+
+/* Remove the 'x' clear button from the search :where(.MarkpromptPrompt field */
+:where(.MarkpromptPrompt[type='search']::-ms-clear) {
+  display: none;
+  width: 0;
+  height: 0;
+}
+:where(.MarkpromptPrompt[type='search']::-ms-reveal) {
+  display: none;
+  width: 0;
+  height: 0;
+}
+:where(.MarkpromptPrompt[type='search']::-webkit-search-decoration),
+:where(.MarkpromptPrompt[type='search']::-webkit-search-cancel-button),
+:where(.MarkpromptPrompt[type='search']::-webkit-search-results-button),
+:where(.MarkpromptPrompt[type='search']::-webkit-search-results-decoration) {
+  display: none;
 }
 
 :where(.MarkpromptPromptContainer) {
@@ -810,11 +809,11 @@ input[type='search']::-webkit-search-results-decoration {
   font-weight: 500;
 }
 
-:where(.SearchResultsContainer) {
-  box-sizing: border-box;
+:where(.MarkpromptSearchResultsContainer) {
   padding: 0.5rem;
-  flex-grow: 1;
   overflow-y: auto;
+  display: flex;
+  flex-direction: column;
 }
 
 :where(.MarkpromptSearchAnswerButton) {
@@ -825,7 +824,6 @@ input[type='search']::-webkit-search-results-decoration {
   background-color: var(--markprompt-muted);
   font-size: var(--markprompt-text-size);
   display: flex;
-  flex: 1 1 auto;
   align-items: center;
   gap: 1rem;
   cursor: pointer;
@@ -880,6 +878,11 @@ input[type='search']::-webkit-search-results-decoration {
   padding-top: 0.5rem;
 }
 
+:where(.MarkpromptSearchResult a) {
+  color: inherit;
+  text-decoration: none;
+}
+
 :where(.MarkpromptSearchResultIndented) {
   margin-left: 1.25rem;
   padding-left: 1rem;
@@ -896,6 +899,11 @@ input[type='search']::-webkit-search-results-decoration {
   border-radius: 0.5rem;
   padding: 0.5rem;
   background-color: var(--markprompt-muted);
+}
+
+:where([aria-selected='true'] .MarkpromptSearchResultLink) {
+  background-color: var(--markprompt-primary);
+  color: var(--markprompt-primaryForeground);
 }
 
 :where(.MarkpromptSearchResultContainer) {
@@ -934,12 +942,33 @@ input[type='search']::-webkit-search-results-decoration {
   font-size: var(--markprompt-text-size);
   flex-direction: column;
   gap: 2px;
+  overflow: hidden;
 }
 
 :where(.MarkpromptSearchResultTitle) {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  max-width: 100%;
+}
+
+:where(.MarkpromptMatch) {
+  font-weight: 600;
+}
+
+:where(.MarkpromptNoSearchResults) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1 1 auto;
+}
+
+:where(.MarkpromptNoSearchResults p) {
+  color: var(--markprompt-mutedForeground);
+}
+
+:where(.MarkpromptNoSearchResults span) {
+  color: var(--markprompt-foreground);
 }
 
 @keyframes markprompt-show-content {
