--- a/examples/with-docusaurus/src/css/custom.css
+++ b/examples/with-docusaurus/src/css/custom.css
@@ -24,6 +24,7 @@
   --markprompt-input: #ffffff;
   --markprompt-primary: #6366f1;
   --markprompt-primaryForeground: #ffffff;
+  --markprompt-primaryBorder: #8285f4;
   --markprompt-secondary: #fafafa;
   --markprompt-secondaryForeground: #171717;
   --markprompt-primaryHighlight: #ec4899;
@@ -55,6 +56,7 @@
   --markprompt-input: #ffffff;
   --markprompt-primary: #6366f1;
   --markprompt-primaryForeground: #ffffff;
+  --markprompt-primaryBorder: #8285f4;
   --markprompt-secondary: #0e0e0e;
   --markprompt-secondaryForeground: #ffffff;
   --markprompt-primaryHighlight: #ec4899;
