--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -510,7 +510,6 @@
   line-height: inherit;
 }
 
-font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 :where(.MarkpromptAnswer pre code::before) {
   content: none;
 }
@@ -848,6 +847,14 @@ font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   background-color: var(--markprompt-muted);
 }
 
+:where(.MarkpromptSearchAnswerButton:focus) {
+  background-color: var(--markprompt-primary);
+}
+
+:where(.MarkpromptSearchAnswerButton:focus .MarkpromptSearchIcon) {
+  color: var(--markprompt-foreground);
+}
+
 :where(.MarkpromptSearchAnswerButton :last-child) {
   margin-left: auto;
 }
@@ -873,6 +880,10 @@ font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   list-style-type: none;
   margin: 0;
   padding: 0;
+}
+
+:where(.MarkpromptSearchResults:focus) {
+  outline: none;
 }
 
 :where(.MarkpromptSearchResults) {
@@ -1093,5 +1104,27 @@ font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+@keyframes markprompt-slide-from-left {
+  from {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes markprompt-slide-from-right {
+  from {
+    opacity: 0;
+    transform: translateX(100%);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
   }
 }
